# Copyright 2021 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

add_subdirectory(cros_displight)
add_subdirectory(cros_flash)
add_subdirectory(cros_kb_raw)
add_subdirectory(cros_kblight)
add_subdirectory(cros_led)
add_subdirectory(cros_rtc)
add_subdirectory(cros_shi)
add_subdirectory(cros_system)
